[gd_scene load_steps=4 format=3 uid="uid://demo_minecraft"]

[ext_resource type="Script" path="res://demos/minecraft_demo.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dylkpea7x0fj6" path="res://addons/inventory_system/scenes/inventory_ui.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://dxeyi01lth3tr" path="res://addons/inventory_system/scenes/hotbar_ui.tscn" id="3"]

[node name="MinecraftDemo" type="Node2D"]
script = ExtResource("1")

[node name="InventoryUI" parent="." instance=ExtResource("2")]
visible = false
offset_left = 200.0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="HotbarUI" parent="." instance=ExtResource("3")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 200.0
offset_top = 520.0
offset_right = 600.0
offset_bottom = 600.0
grow_horizontal = 1
grow_vertical = 1

[node name="InfoLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 600.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0.2, 1, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 20
text = "Presiona E para inventario | Enter para mesa de trabajo"

[node name="ControlsLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 70.0
offset_right = 400.0
offset_bottom = 300.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "ðŸŽ® CONTROLES MINECRAFT

INVENTARIO:
â€¢ E: Abrir/Cerrar
â€¢ Click Izq: Tomar/Colocar
â€¢ Click Der: Dividir stack
â€¢ Shift+Click: Mover rÃ¡pido
â€¢ Q: Soltar 1 item

HOTBAR:
â€¢ 1-9: Seleccionar slot
â€¢ Scroll: Cambiar slot

CRAFTING:
â€¢ Enter: Mesa de trabajo
â€¢ Arrastra items a grilla"
